--- a/2º_Curso/desenvolvemento_interfaces/evaluacion_2/tema_5/ejercicio2/formulario/Properties/Resources.resx
+++ b/2º_Curso/desenvolvemento_interfaces/evaluacion_2/tema_5/ejercicio2/formulario/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="images" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\images.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="img28" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img28.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
